<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_favourites">Favourites</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_settings">Settings</string>

    <string name="settings_title_params">Display parameters</string>
    <string name="settings_title_unit">Temperature unit</string>
    <string name="settings_title_sens">Phone sensors</string>

    <string name="title_wind">Wind:</string>
    <string name="title_pressure">Pressure:</string>
    <string name="title_humidity">Humidity:</string>
    <string name="title_temperature">Temperature:</string>
    <string name="settings_wind">wind</string>
    <string name="settings_pressure">pressure</string>
    <string name="settings_humidity">humidity</string>

    <string name="unit_cel">&#8451;</string>
    <string name="unit_fah">&#8457;</string>
    <string name="unit_gPa">gPa</string>

    <string name="city_name_request">Enter the city</string>
    <string name="empty_cities_list">The list of saved cities is empty</string>

    <string name="toolbar_title_favorites">Cities</string>
    <string name="toolbar_title_settings">Settings</string>

    <string name="coordinate_string">lat: %1$.2f, lon: %2$.2f</string>
    <string name="sensor_temp_c_string">%1$.2f &#8451;</string>
    <string name="sensor_temp_f_string">%1$.2f &#8457;</string>
    <string name="sensor_press_string">%1$.2f gPa</string>
    <string name="sensor_hum_string">%1$.2f%%</string>

    <string name="no_sensor">No sensor!</string>

    <string name="incorrect_city_name">Enter the name of the city!</string>
    <string name="btn_choose_city">Choose city from list</string>
    <string name="add_city_name">Add the city</string>
    <string name="success_add_city">The city was successfully added</string>
    <string name="fail_add_city">Error adding city</string>
    <string name="add_city_dialog_title">Adding a city</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="menu_item_settings">Settings</string>
    <string name="weather_through_sensors">Current location(using phone\'s sensors)</string>
    <string name="celsius_degree">&#8451;</string>
    <string name="sensors_dialog_title">Sensor readings:</string>
    <string name="city_is_not_exists">City is not exists</string>
    <string name="wind_calm">Calm</string>
    <string name="wind_light_air">Light air</string>
    <string name="wind_light_breeze">Light breeze</string>
    <string name="wind_gentle_breeze">Gentle breeze</string>
    <string name="wind_moderate_breeze">Moderate breeze</string>
    <string name="wind_fresh_breeze">Fresh breeze</string>
    <string name="wind_strong_breeze">Strong breeze</string>
    <string name="wind_moderate_gale">Moderate gale</string>
    <string name="wind_fresh_gale">Fresh gale</string>
    <string name="wind_strong_gale">Strong gale</string>
    <string name="wind_whole_gale">Whole gale</string>
    <string name="wind_storm">Storm</string>
    <string name="wind_hurricane">Hurricane</string>
</resources>
