<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background_image"
        style="@style/WelcomeBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_enter_city_name"
        style="@style/CityNameEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city_name_request"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_choose_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_add_city_name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_city_name"
        app:layout_constraintBottom_toTopOf="@id/btn_choose_city"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/et_enter_city_name"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_choose_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_choose_city"
        app:layout_constraintBottom_toTopOf="@id/ll_checkboxes"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_city_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_transition"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_city">

        <CheckBox
            android:id="@+id/cb_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_wind" />

        <CheckBox
            android:id="@+id/cb_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pressure" />

        <CheckBox
            android:id="@+id/cb_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_humidity" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_transition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_watch_the_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_checkboxes" />

</android.support.constraint.ConstraintLayout>