<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@color/filterDark"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_city_name"
        style="@style/CityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city_name_request"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/checkboxes_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/checkboxes_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_transition"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city_name">

        <CheckBox
            android:id="@+id/checkbox_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_wind" />

        <CheckBox
            android:id="@+id/checkbox_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pressure" />

        <CheckBox
            android:id="@+id/checkbox_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_humidity" />
    </LinearLayout>

    <Button
        android:id="@+id/button_transition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickTransit"
        android:text="@string/button_transition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxes_layout" />
</android.support.constraint.ConstraintLayout>