<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_card_offset"
            android:elevation="@dimen/settings_card_elevation"
            app:cardBackgroundColor="@color/colorPrimaryTransparent"
            app:cardCornerRadius="@dimen/settings_card_corner_radius"
            tools:targetApi="lollipop">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_inner_offset">

                <TextView
                    android:id="@+id/tv_title_params"
                    style="@style/SettingsBlockTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_params"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cb_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    android:text="@string/settings_wind"
                    style="@style/SettingsInnerTextStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cb_pressure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_params" />

                <CheckBox
                    android:id="@+id/cb_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    android:text="@string/settings_pressure"
                    style="@style/SettingsInnerTextStyle"
                    app:layout_constraintBottom_toBottomOf="@id/cb_wind"
                    app:layout_constraintEnd_toStartOf="@id/cb_humidity"
                    app:layout_constraintStart_toEndOf="@id/cb_wind"
                    app:layout_constraintTop_toTopOf="@id/cb_wind" />

                <CheckBox
                    android:id="@+id/cb_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    android:text="@string/settings_humidity"
                    style="@style/SettingsInnerTextStyle"
                    app:layout_constraintBottom_toBottomOf="@id/cb_wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cb_pressure"
                    app:layout_constraintTop_toTopOf="@id/cb_wind" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_card_offset"
            android:elevation="@dimen/settings_card_elevation"
            app:cardBackgroundColor="@color/colorPrimaryTransparent"
            app:cardCornerRadius="@dimen/settings_card_corner_radius"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_inner_offset"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsBlockTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_unit" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_temp_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    android:textOff="@string/unit_cel"
                    android:textOn="@string/unit_fah"
                    app:showText="true" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_card_offset"
            android:elevation="@dimen/settings_card_elevation"
            app:cardBackgroundColor="@color/colorPrimaryTransparent"
            app:cardCornerRadius="@dimen/settings_card_corner_radius"
            tools:targetApi="lollipop">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:padding="@dimen/settings_inner_offset">

                <TextView
                    android:id="@+id/tv_title_sensors"
                    style="@style/SettingsBlockTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_sens"
                    app:layout_constraintBottom_toTopOf="@id/sw_show_sensors"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_show_sensors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    app:layout_constraintBottom_toTopOf="@id/tv_title_sens_temp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_sensors" />

                <TextView
                    android:id="@+id/tv_title_sens_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    style="@style/SettingsInnerTextStyle"
                    android:text="@string/title_temperature"
                    app:layout_constraintBottom_toTopOf="@id/tv_title_sens_press"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sw_show_sensors" />

                <TextView
                    android:id="@+id/tv_val_sens_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    style="@style/SettingsInnerTextStyle"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_sens_temp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_sens_temp" />

                <TextView
                    android:id="@+id/tv_title_sens_press"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsInnerTextStyle"
                    android:layout_margin="@dimen/settings_offset"
                    android:text="@string/title_pressure"
                    app:layout_constraintBottom_toTopOf="@id/tv_title_sens_hum"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_sens_temp" />

                <TextView
                    android:id="@+id/tv_val_sens_press"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_offset"
                    style="@style/SettingsInnerTextStyle"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_sens_press"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_sens_press" />

                <TextView
                    android:id="@+id/tv_title_sens_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsInnerTextStyle"
                    android:layout_margin="@dimen/settings_offset"
                    android:text="@string/title_humidity"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_sens_press" />

                <TextView
                    android:id="@+id/tv_val_sens_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsInnerTextStyle"
                    android:layout_margin="@dimen/settings_offset"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_sens_hum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_sens_hum" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>